--- a/index.html
+++ b/index.html
@@ -124,7 +124,26 @@
                 </div>
             </div>
         </div>
-
+           <div id="upcoming" class="gap">
+            <div class="row my-3">
+                <h3 class="text-center fs-1 fw-bold">制作人员</h3>
+            </div>
+			<div id="info" class="gap">
+            <div class="row my-3">
+                <h3 class="text-center fs-1 fw-bold">以下为2022年拜年祭创作及参与者</h3>
+            </div>
+			<div id="info" class="gap">
+                        <div class="row my-3">
+                <div class="col-md-8 mx-auto">
+                    <p class="fs-4 lh-lg">
+                    </p>总策划&调音：萱洛小峰
+                     </p>美术&转场音频&pv制作：@DNexus
+</p>配音：@贝纳德-瓦兹曼_巴尼 、@废物千枫老摆烂
+</p>剪辑：@鹅妈妈Kira_Kira 、@敷衍转身错过 、@甲鱼教学 、@雨裡青山夢裡人 、@吃瓜的灯神
+</p>视频制作：@fa兰不死队 、@YS_tar 、@AY伊索 、@萨穆尔丶基肯艾德 、@DNexus 及他的氏族团队、@紫塔ZitaWup 、@樱满勿忘
+</p>参演：@紫夜非月 @茶树咕咕菇 @jxtichi012 @威武葱哥
+</p>填词：@墨中自生竹
+					</div>
         <div id="about" class="gap">
             <div class="row my-3">
                 <h3 class="text-center fs-1 fw-bold">关于</h3>
